--- a/app/src/main/res/layout/manual_player_link.xml
+++ b/app/src/main/res/layout/manual_player_link.xml
@@ -192,14 +192,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/mpl_cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:backgroundTint="#FFFFFF"
@@ -209,9 +210,21 @@
             app:strokeWidth="2dp" />
 
         <Button
+            android:id="@+id/mpl_newPlayerButton"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="New Player"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+
+        <Button
             android:id="@+id/mpl_acceptButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:backgroundTint="@color/colorUnselected"
             android:text="Accept" />
