--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -35,31 +35,6 @@
             android:textColor="#000000" />
 
         <Button
-            android:id="@+id/assignTeam_checkIdButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="3"
-            android:backgroundTint="@color/buttonGreen"
-            android:contentDescription="Check Id Button"
-            android:text="Check Id"
-            android:textColor="#FFFFFF"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/assignTeam_playerId"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="3"
-            android:text="UA2141"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:visibility="visible" />
-
-        <Button
             android:id="@+id/assignTeam_GroupButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -85,6 +60,20 @@
             app:iconTint="#000000"
             app:strokeColor="#000000"
             app:strokeWidth="2dp" />
+
+        <Button
+            android:id="@+id/assignTeam_checkIdButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="6"
+            android:backgroundTint="@color/buttonGreen"
+            android:contentDescription="Check Id Button"
+            android:text="Match player"
+            android:textColor="#FFFFFF"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/assignTeam_blueTeamButton"
